Fixed magazine alignment, added magazine page, and display A/B day

--- a/src/comps/Schedule.css
+++ b/src/comps/Schedule.css
@@ -5,6 +5,13 @@
   flex-direction: row; /* Stack children vertically */
 }
 
+.day-type {
+  margin: 4px 0; /* Space between items within left and right schedules */
+  -webkit-text-stroke: 0.5px black;
+  font-size: 1em;
+
+}
+
 .left-schedule,
 .right-schedule {
   width: 50%; /* Each takes up half of the container's width */
